# NcatBot

./: .gitignore  README.md  pyproject.toml  release-notes.md
.agents/skills/doc-nav/references/: keyword-doc-index.md  symptom-doc-table.md
.agents/skills/framework-dev/references/: adapter-cli-hooks.md  import-conventions.md  multi-platform.md
.agents/skills/framework-usage/references/: getting-started.md  multi-platform.md  troubleshooting.md
code/: config.yaml  requirements.txt
code/plugins/drive_bot/: README.md  manifest.toml  plugin.py
code/utils/: constants.py  jmcomic_crawler.py  msg_parser.py
ncatbot/core/: __init__.py
ncatbot/core/registry/: __init__.py  builtin_hooks.py
ncatbot/plugin/builtin/system_manager/: main.py
ncatbot/types/napcat/: file.py
ncatbot/utils/config/: storage.py
tests/: README.md
tests/e2e/plugin/: README.md  test_drive_bot.py
tests/unit/adapter/: README.md  test_snowluma_adapter.py
tests/unit/cli/: README.md  test_snowluma_cli.py
tests/unit/config/: test_config_layer.py
tests/unit/plugin/: test_system_manager_heartbeat.py
tests/unit/types/: README.md  test_napcat_types.py
